src/test/compile-fail/arg_type_mismatch.mmtn
// { "compile_status": "fail" }

struct Unit {}

fn foo(n: u64) -> u64 {
    n
}

fn main() -> u64 {
    let n = foo(Unit {});
    n
}
